--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,11 +25,13 @@
 		<link rel="stylesheet" href="assets/css/flexslider.css">
 		<link rel="stylesheet" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" href="assets/css/styles-1.css">
+		<link rel="stylesheet" href="assets/css/style.css"
 
 		<!-- ==============================================
 		Fonts
 		=============================================== -->
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,600,700' rel='stylesheet' type='text/css'>
+
 
 
 		<!-- ==============================================
@@ -72,10 +74,10 @@
 							<a href="#services" class="scrollto"><i class="fa fa-cog"></i>Specialties</a>
 						</li>
 						<li>
-							<a href="#about" class="scrollto"><i class="fa fa-graduation-cap"></i>Profile</a>
+							<a href="#portfolio" class="scrollto"><i class="fa fa-briefcase"></i>Portfolio</a>
 						</li>
 						<li>
-							<a href="#portfolio" class="scrollto"><i class="fa fa-briefcase"></i>Portfolio</a>
+							<a href="#about" class="scrollto"><i class="fa fa-graduation-cap"></i>Profile</a>
 						</li>
 						<li>
 							<a href="#contact" class="scrollto"><i class="fa fa-envelope"></i>Contact</a>
@@ -140,38 +142,69 @@
 						<div class="row tab-pane active" id="front-end">
 
 							<div class="col-sm-4 service-item scrollimation fade-left">
-								<figure class="hover-wrapper scrollimation fade-left">
 									<!-- <img class="img-responsive img-circle profile-img" src="assets/images/sexyKaram.PNG" alt="">
 									<figcaption class="hover-text">That's Me!</figcaption> -->
-								<div class="service-icon "><i class="fa fa-html5"></i></div>
-								<figcaption class="hover-text">HTML5</figcaption>
+								<!-- <div class="service-icon "><i class="fa fa-html5"></i></div> -->
+									<figure class="hover-wrapper scrollimation fade-left">
+										<div class="service-icon "><img class="img-responsive1" src="assets/images/html.png" alt="" /></div>
+										<figcaption class="hover-text">HTML5</figcaption>
+									</figure>
+									<br>
+									<figure class="hover-wrapper scrollimation fade-left">
+										<div class="service-icon "><img class="img-responsive1" src="assets/images/css.png" alt="" /></div>
+										<figcaption class="hover-text">CSS</figcaption>
+									</figure>
+									<br>
+									<figure class="hover-wrapper scrollimation fade-left">
+										<div class="service-icon "><img class="img-responsive1" src="assets/images/javascript.png" alt="" /></div>
+										<figcaption class="hover-text">Javascript</figcaption>
+									</figure>
 								<!-- <div class="service-icon "><i class="fa fa-css3"></i></div> -->
 
 								<!-- <h3>Clean HTML5 Code</h3>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo.</p> -->
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo.</p> <--></-->
+							</div>
+							<div class="col-sm-4 service-item scrollimation fade-left">
+									<!-- <img class="img-responsive img-circle profile-img" src="assets/images/sexyKaram.PNG" alt="">
+									<figcaption class="hover-text">That's Me!</figcaption> -->
 
+
+
+										<figure class="hover-wrapper scrollimation fade-left">
+											<div class="service-icon "><img class="img-responsive1" src="assets/images/bootsrap.png" alt="" /></div>
+											<figcaption class="hover-text">Bootstrap</figcaption>
+										</figure>
+										<br>
+										<figure class="hover-wrapper scrollimation fade-left">
+											<div class="service-icon "><img class="img-responsive2" src="assets/images/jQUERY.png" alt="" /></div>
+											<figcaption class="hover-text">jQuery</figcaption>
+										</figure>
+										<br>
+										<figure class="hover-wrapper scrollimation fade-left">
+											<div class="service-icon "><img class="img-responsive1" src="assets/images/angular.png" alt="" /></div>
+											<figcaption class="hover-text">Angular.JS</figcaption>
+										</figure>
+
+							</div>
+
+							<div class="col-sm-4 service-item scrollimation fade-left">
+
+								<figure class="hover-wrapper scrollimation fade-left">
+									<div class="service-icon "><img class="img-responsive1" src="assets/images/gulp.png" alt="" /></div>
+
+									<figcaption class="hover-text">Gulp.JS</figcaption>
 								</figure>
-							</div>
-
-							<div class="col-sm-4 service-item scrollimation fade-left">
-
-								<div class="service-icon "><i class="fa fa-css3"></i></div>
-
-								<!-- <h3>Modern CSS3 styles</h3>
-
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo.</p> -->
-
-
-							</div>
-
-							<div class="col-sm-4 service-item scrollimation fade-left">
-
-								<div class="service-icon "><i class="fa fa-mobile"></i></div>
-
-								<!-- <h3>Responsive Design</h3>
-
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo.</p> -->
+								<br>
+								<figure class="hover-wrapper scrollimation fade-left">
+									<div class="service-icon "><img class="img-responsive1" src="assets/images/sass.png" alt="" /></div>
+									<figcaption class="hover-text">SASS</figcaption>
+								</figure>
+								<br>
+								<figure class="hover-wrapper scrollimation fade-left">
+									<div class="service-icon "><img class="img-responsive1" src="assets/images/react.png" alt="" /></div>
+									<figcaption class="hover-text">React.JS</figcaption>
+								</figure>
 
 							</div>
 
@@ -224,11 +257,11 @@
 			LATEST PROJECTS
 			=============================================== -->
 
-			<section class="big-padding gray-bg">
+			<section class="big-padding gray-bg" id="portfolio">
 
 				<div class="container">
 
-					<h1 class="section-title">Latest Projects<span class="main-color">2</span></h1>
+					<h1 class="section-title">My Portfolio<span class="main-color">2</span></h1>
 
 					<div class="row">
 
@@ -258,11 +291,9 @@
 
 							<h2 class="row-title">Krello  - Trello Clone</h2>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget lorem orci. Suspendisse posuere tincidunt dui vel tempus. Fusce ut vulputate ipsum, id sodales arcu. Praesent ultricies pretium sem, fermentum sagittis.</p>
+							<p>Krello is a collaboration tool that organizes your projects into boards. In one glance, Krello tells you what's being worked on, who's working on what, and where something is in a process.</p>
 
-							<p>Suspendisse posuere tincidunt dui vel tempus. Fusce ut vulputate ipsum, id sodales arcu. Praesent ultricies pretium sem, fermentum sagittis.</p>
-
-							<p><a class="btn btn-dc btn-small btn-main-color" href="#link">Visit Website</a></p>
+							<p><a class="btn btn-dc btn-small btn-main-color" href="http://107.170.47.215:3000/">Visit Website</a></p>
 
 						</div>
 
@@ -310,10 +341,10 @@
 								<figcaption class="hover-text">That's Me!</figcaption>
 							</figure>
 
-							<h2 class="scrollimation fade-left">John Doe</h2>
-							<h3 class="scrollimation fade-left">UI / UX Expert</h3>
+							<h2 class="scrollimation fade-left">Karam Hijazi</h2>
+							<h3 class="scrollimation fade-left">FrontEnd Web Developer</h3>
 
-							<p class="margin-top scrollimation fade-right">I am Jonathan Doe, a twenty five year old designer from NY. I have graduated with a Bachelor degree of Graphic & Web Design, from the University of Pasadena. I have a passion for creating challenging, intuitive and beautiful products. My design process is very hands-on and visual.</p>
+							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have graduated from a intense thirteen week bootcamp, from Devmountain. I have a passion for creating challenging, intuitive and beautiful products. My developing process is very hands-on and visual.</p>
 
 							<p class="lead margin-top scrollimation fade-left">Creating is not just a job for me, it's a passion. </p>
 							<p class="scrollimation fade-left"><a class="btn btn-dc btn-main-color scrollto" href="#portfolio">My Portfolio</a></p>
@@ -361,7 +392,7 @@
 			<!-- ==============================================
 			PORTFOLIO
 			=============================================== -->
-			<section id="portfolio" class="big-padding" >
+			<!-- <section id="portfolio" class="big-padding" >
 
 				<div class="container">
 
@@ -370,7 +401,7 @@
 
 					<!--==== Portfolio Filters ====-->
 
-					<div class="text-center scrollimation fade-up">
+					<!-- <div class="text-center scrollimation fade-up">
 						<div id="filter-works" class="btn-group">
 							<button data-filter="*" type="button" class="btn btn-default active">All Items<span class="project-count"></span></button>
 							<button data-filter=".web" type="button" class="btn btn-default">Web<span class="project-count"></span></button>
@@ -383,20 +414,20 @@
 
 				<div class="container scrollimation fade-up">
 
-					<div id="projects-container" class="row">
+					<div id="projects-container" class="row"> -->
 
 						<!-- ==============================================
 						SINGLE PROJECT ITEM
 						=============================================== -->
 
-						<a class="project-item col-sm-6 col-md-4 col-lg-3 web" href="#?slider-project.html">
+						<!-- <a class="project-item col-sm-6 col-md-4 col-lg-3 web" href="#?slider-project.html">
 
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-1.jpg"  alt="">
 
 							<div class="hover-title">
 								<h2 class="project-title">Project with Slider</h2><!--Project Title -->
-								<p>Brochure design</p><!--Project Subtitle -->
-							</div>
+							<!--	<p>Brochure design</p>Project Subtitle -->
+							<!-- </div>
 
 						</a>
 
@@ -405,9 +436,9 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-2.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Video project</h2><!--Project Title -->
-								<p>Youtube video</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Video project</h2> Project Title
+								<p>Youtube video</p>Project Subtitle -->
+							<!-- </div>
 
 						</a>
 
@@ -416,8 +447,8 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-3.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Fullwidth images</h2><!--Project Title -->
-								<p>Professional Web Design</p><!--Project Subtitle -->
+								<h2 class="project-title">Fullwidth images</h2>Project Title
+								<p>Professional Web Design</p>Project Subtitle
 							</div>
 
 						</a>
@@ -427,8 +458,8 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-4.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Another Video project</h2><!--Project Title -->
-								<p>Vimeo video</p><!--Project Subtitle -->
+								<h2 class="project-title">Another Video project</h2>Project Title
+								<p>Vimeo video</p>
 							</div>
 
 						</a>
@@ -438,9 +469,9 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-6.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Project with Slider</h2><!--Project Title -->
-								<p>Modern Business Card</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Project with Slider</h2>
+								<p>Modern Business Card</p>Project Subtitle -->
+							<!-- </div>
 
 						</a>
 
@@ -448,10 +479,10 @@
 
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-7.jpg"  alt="">
 
-							<div class="hover-title">
-								<h2 class="project-title">Fullwidth images</h2><!--Project Title -->
-								<p>Poster Design</p><!--Project Subtitle -->
-							</div>
+							<div class="hover-title"> -->
+							<!--	<h2 class="project-title">Fullwidth images</h2>Project Title -->
+								<!-- <p>Poster Design</p>Project Subtitle -->
+							<!-- </div>
 
 						</a>
 
@@ -460,9 +491,9 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-8.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Project with Slider</h2><!--Project Title -->
-								<p>Personal Business Card</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Project with Slider</h2>Project Title -->
+								<!-- <p>Personal Business Card</p>Project Subtitle -->
+							<!-- </div>
 
 						</a>
 
@@ -471,8 +502,8 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-5.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Video project</h2><!--Project Title -->
-								<p>Vimeo video</p><!--Project Subtitle -->
+								<h2 class="project-title">Video project</h2>Project Title
+								 <p>Vimeo video</p> Project Subtitle
 							</div>
 
 						</a>
@@ -482,9 +513,9 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-9.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Project with Slider</h2><!--Project Title -->
-								<p>Professional Brand Identity</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Project with Slider</h2>Project Title
+								<p>Professional Brand Identity</p>Project Subtitle
+							 </div>
 
 						</a>
 
@@ -493,9 +524,9 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-10.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Another Video project</h2><!--Project Title -->
-								<p>Vimeo video</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Another Video project</h2>Project Title
+								 <p>Vimeo video</p>Project Subtitle
+						 </div>
 
 						</a>
 
@@ -504,9 +535,9 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-11.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Fullwidth images</h2><!--Project Title -->
-								<p>Creative Business Card</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Fullwidth images</h2>Project Title
+								 <p>Creative Business Card</p>Project Subtitle
+							 </div>
 
 						</a>
 
@@ -515,18 +546,18 @@
 							<img class="img-responsive project-image" src="assets/images/projects/thumb-12.jpg"  alt="">
 
 							<div class="hover-title">
-								<h2 class="project-title">Video project</h2><!--Project Title -->
-								<p>Youtube video</p><!--Project Subtitle -->
-							</div>
+								<h2 class="project-title">Video project</h2>Project Title  -
+								 <p>Youtube video</p>Project Subtitle
+							 </div>
 
 						</a>
 
 					</div>
 
-					<!-- <p class="lead text-center">Like what you see? Contact me to discuss about your project!</p>
-					<p class="text-center"><a class="btn btn-dc btn-main-color scrollto" href="#contact">Contact Me</a></p> -->
+					 <p class="lead text-center">Like what you see? Contact me to discuss about your project!</p>
+					<p class="text-center"><a class="btn btn-dc btn-main-color scrollto" href="#contact">Contact Me</a></p>
 
-				</div>
+				 </div>
 
 			</section>
 
@@ -725,12 +756,12 @@
 							</p>
 
 							<div class="social-links">
-								<a href="#"><i class="fa fa-fw fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-fw fa-facebook-square"></i></a>
-								<a href="#"><i class="fa fa-fw fa-linkedin-square"></i></a>
+								<a href="https://twitter.com/KaramHijazi"><i class="fa fa-fw fa-twitter"></i></a>
+								<a href="https://www.facebook.com/karam.hijazi.33"><i class="fa fa-fw fa-facebook-square"></i></a>
+								<a href="https://www.linkedin.com/in/karamhijazi"><i class="fa fa-fw fa-linkedin-square"></i></a>
 							</div>
 
-							<p><a class="mail-styled" href="mailto:mail@example.com">contact@johndoe.com</a></p>
+							<p><a class="mail-styled" href="mailto:hijazikaram@gmail.com">contact@karamhijazi.com</a></p>
 
 						</div>
 
@@ -780,13 +811,7 @@
 
 					<div class="row">
 
-						<div class="col-sm-2">
 
-							<a class="logo-link scrollto" href="#home">
-								<img class="img-responsive" src="assets/images/logo-bw.png" alt="" />
-							</a>
-
-						</div>
 
 						<div class="col-sm-8">
 
@@ -805,9 +830,9 @@
 
 						<div class="col-sm-2 text-right social-links">
 
-							<a href="#" data-toggle="tooltip" title="Follow me on Twitter"><i class="fa fa-fw fa-twitter"></i></a>
-							<a href="#" data-toggle="tooltip" title="Follow me on Facebook"><i class="fa fa-fw fa-facebook"></i></a>
-							<a href="#" data-toggle="tooltip" title="Follow me on LinkedIn"><i class="fa fa-fw fa-linkedin"></i></a>
+							<a href="https://twitter.com/KaramHijazi" data-toggle="tooltip" title="Follow me on Twitter"><i class="fa fa-fw fa-twitter"></i></a>
+							<a href="https://www.facebook.com/karam.hijazi.33" data-toggle="tooltip" title="Follow me on Facebook"><i class="fa fa-fw fa-facebook"></i></a>
+							<a href="https://www.linkedin.com/in/karamhijazi" data-toggle="tooltip" title="Follow me on LinkedIn"><i class="fa fa-fw fa-linkedin"></i></a>
 
 						</div>
 
