--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
 		<!-- ==============================================
 		Favicons
 		=============================================== -->
-		<link rel="shortcut icon" href="assets/images/favicon.ico">
+		<!-- <link rel="shortcut icon" href="assets/images/favicon.ico"> -->
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
@@ -145,20 +145,17 @@
 									<!-- <img class="img-responsive img-circle profile-img" src="assets/images/sexyKaram.PNG" alt="">
 									<figcaption class="hover-text">That's Me!</figcaption> -->
 								<!-- <div class="service-icon "><i class="fa fa-html5"></i></div> -->
-									<figure class="hover-wrapper scrollimation fade-left">
+
 										<div class="service-icon "><img class="img-responsive1" src="assets/images/html.png" alt="" /></div>
-										<figcaption class="hover-text">HTML5</figcaption>
-									</figure>
+
 									<br>
-									<figure class="hover-wrapper scrollimation fade-left">
+
 										<div class="service-icon "><img class="img-responsive1" src="assets/images/css.png" alt="" /></div>
-										<figcaption class="hover-text">CSS</figcaption>
-									</figure>
+
 									<br>
-									<figure class="hover-wrapper scrollimation fade-left">
+
 										<div class="service-icon "><img class="img-responsive1" src="assets/images/javascript.png" alt="" /></div>
-										<figcaption class="hover-text">Javascript</figcaption>
-									</figure>
+
 								<!-- <div class="service-icon "><i class="fa fa-css3"></i></div> -->
 
 								<!-- <h3>Clean HTML5 Code</h3>
@@ -171,40 +168,40 @@
 
 
 
-										<figure class="hover-wrapper scrollimation fade-left">
+
 											<div class="service-icon "><img class="img-responsive1" src="assets/images/bootsrap.png" alt="" /></div>
-											<figcaption class="hover-text">Bootstrap</figcaption>
-										</figure>
+
+
 										<br>
-										<figure class="hover-wrapper scrollimation fade-left">
-											<div class="service-icon "><img class="img-responsive2" src="assets/images/jQUERY.png" alt="" /></div>
-											<figcaption class="hover-text">jQuery</figcaption>
-										</figure>
+
+											<div class="service-icon "><img class="img-responsive2" src="assets/images/jquery.png" alt="" /></div>
+
+
 										<br>
-										<figure class="hover-wrapper scrollimation fade-left">
+
 											<div class="service-icon "><img class="img-responsive1" src="assets/images/angular.png" alt="" /></div>
-											<figcaption class="hover-text">Angular.JS</figcaption>
-										</figure>
+
+
 
 							</div>
 
 							<div class="col-sm-4 service-item scrollimation fade-left">
 
-								<figure class="hover-wrapper scrollimation fade-left">
+
 									<div class="service-icon "><img class="img-responsive1" src="assets/images/gulp.png" alt="" /></div>
 
-									<figcaption class="hover-text">Gulp.JS</figcaption>
-								</figure>
+
+
 								<br>
-								<figure class="hover-wrapper scrollimation fade-left">
+
 									<div class="service-icon "><img class="img-responsive1" src="assets/images/sass.png" alt="" /></div>
-									<figcaption class="hover-text">SASS</figcaption>
-								</figure>
+
+
 								<br>
-								<figure class="hover-wrapper scrollimation fade-left">
+
 									<div class="service-icon "><img class="img-responsive1" src="assets/images/react.png" alt="" /></div>
-									<figcaption class="hover-text">React.JS</figcaption>
-								</figure>
+									
+
 
 							</div>
 
@@ -344,7 +341,7 @@
 							<h2 class="scrollimation fade-left">Karam Hijazi</h2>
 							<h3 class="scrollimation fade-left">FrontEnd Web Developer</h3>
 
-							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have graduated from a intense thirteen week bootcamp, from Devmountain. I have a passion for creating challenging, intuitive and beautiful products. My developing process is very hands-on and visual.</p>
+							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have graduated from a intense thirteen week bootcamp, from Devmountain. I have a passion for creating challenging, intuitive, and beautiful products. My developing process is very hands-on and visual.</p>
 
 							<p class="lead margin-top scrollimation fade-left">Creating is not just a job for me, it's a passion. </p>
 							<p class="scrollimation fade-left"><a class="btn btn-dc btn-main-color scrollto" href="#portfolio">My Portfolio</a></p>
@@ -367,19 +364,19 @@
 					<div class="row skills">
 
 						<div class="col-sm-6 col-md-3 text-center">
-							<span class="chart plus-symbol" data-percent="90"><span class="percent">95</span></span>
-							<h2 class="text-center">Front End</h2>
+							<span class="chart plus-symbol" data-percent="95"><span class="percent">95</span></span>
+							<h2 class="text-center">HTML</h2>
 						</div>
 						<div class="col-sm-6 col-md-3 text-center">
-							<span class="chart plus-symbol" data-percent="80"><span class="percent">75</span></span>
-							<h2 class="text-center">Back End</h2>
+							<span class="chart plus-symbol" data-percent="95"><span class="percent">95</span></span>
+							<h2 class="text-center">CSS</h2>
 						</div>
 						<div class="col-sm-6 col-md-3 text-center">
-							<span class="chart equal-symbol" data-percent="95"><span class="percent">95</span></span>
-							<h2 class="text-center">Support</h2>
+							<span class="chart equal-symbol" data-percent="90"><span class="percent">90</span></span>
+							<h2 class="text-center">JavaScript</h2>
 						</div>
 						<div class="col-sm-6 col-md-3 text-center">
-							<span class="chart" data-percent="90"><span class="percent">90</span></span>
+							<span class="chart" data-percent="93"><span class="percent">93</span></span>
 							<h2 class="text-center main-color">High Score</h2>
 						</div>
 
@@ -750,14 +747,14 @@
 
 							<p>
 								Karam Hijazi<br/>
-								8001 River Field Ct<br/>
-								Bowie, MD(Maryland) 20715<br/>
+								<!-- 8001 River Field Ct<br/>
+								Bowie, MD(Maryland) 20715<br/> -->
 								(240) 456 - 7890 <br/>
 							</p>
 
 							<div class="social-links">
 								<a href="https://twitter.com/KaramHijazi"><i class="fa fa-fw fa-twitter"></i></a>
-								<a href="https://www.facebook.com/karam.hijazi.33"><i class="fa fa-fw fa-facebook-square"></i></a>
+								<!-- <a href="https://www.facebook.com/karam.hijazi.33"><i class="fa fa-fw fa-facebook-square"></i></a> -->
 								<a href="https://www.linkedin.com/in/karamhijazi"><i class="fa fa-fw fa-linkedin-square"></i></a>
 							</div>
 
