--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
 		Title and Meta Tags
 		=============================================== -->
 		<meta charset="utf-8">
-		<title>D-cubed | Modern Personal Portfolio</title>
+		<title>Karams Portfolio</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -14,9 +14,9 @@
 		Favicons
 		=============================================== -->
 		<!-- <link rel="shortcut icon" href="assets/images/favicon.ico"> -->
-		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+		<!-- <link rel="apple-touch-icon" href="">
+		<link rel="apple-touch-icon" sizes="72x72" href="">
+		<link rel="apple-touch-icon" sizes="114x114" href=""> -->
 
 		<!-- ==============================================
 		CSS
@@ -200,7 +200,7 @@
 								<br>
 
 									<div class="service-icon "><img class="img-responsive1" src="assets/images/react.png" alt="" /></div>
-									
+
 
 
 							</div>
