--- a/Public/index.html
+++ b/Public/index.html
@@ -13,10 +13,7 @@
 		<!-- ==============================================
 		Favicons
 		=============================================== -->
-		<!-- <link rel="shortcut icon" href="assets/images/favicon.ico"> -->
-		<!-- <link rel="apple-touch-icon" href="">
-		<link rel="apple-touch-icon" sizes="72x72" href="">
-		<link rel="apple-touch-icon" sizes="114x114" href=""> -->
+		<link rel="shortcut icon" href="assets/images/kh.jpg" />
 
 		<!-- ==============================================
 		CSS
@@ -71,7 +68,7 @@
 				<div id="site-nav" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="#services" class="scrollto"><i class="fa fa-cog"></i>Specialties</a>
+							<a href="#services" class="scrollto"><i class="fa fa-cog"></i>Skills</a>
 						</li>
 						<li>
 							<a href="#portfolio" class="scrollto"><i class="fa fa-briefcase"></i>Portfolio</a>
@@ -108,7 +105,7 @@
 				</div>
 
 				<div class="header-img scrollimation fade-up d1">
-					<img class="img-responsive" src="assets/images/dc.jpg" alt="" />
+					<img class="img-responsive d98" src="assets/images/sexyKaram.png" alt="" />
 				</div>
 
 			</div>
@@ -828,7 +825,7 @@
 						<div class="col-sm-2 text-right social-links">
 
 							<a href="https://twitter.com/KaramHijazi" data-toggle="tooltip" title="Follow me on Twitter"><i class="fa fa-fw fa-twitter"></i></a>
-							<a href="https://www.facebook.com/karam.hijazi.33" data-toggle="tooltip" title="Follow me on Facebook"><i class="fa fa-fw fa-facebook"></i></a>
+							<!-- <a href="https://www.facebook.com/karam.hijazi.33" data-toggle="tooltip" title="Follow me on Facebook"><i class="fa fa-fw fa-facebook"></i></a> -->
 							<a href="https://www.linkedin.com/in/karamhijazi" data-toggle="tooltip" title="Follow me on LinkedIn"><i class="fa fa-fw fa-linkedin"></i></a>
 
 						</div>
