--- a/Public/index.html
+++ b/Public/index.html
@@ -105,7 +105,7 @@
 				</div>
 
 				<div class="header-img scrollimation fade-up d1">
-					<img class="img-responsive d98" src="assets/images/sexyKaram.png" alt="" />
+					<img class="img-responsive d98" src="assets/images/sexyKaram.PNG" alt="" />
 				</div>
 
 			</div>
