--- a/Public/index.html
+++ b/Public/index.html
@@ -68,13 +68,13 @@
 				<div id="site-nav" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="#services" class="scrollto"><i class="fa fa-cog"></i>Skills</a>
+							<a href="#about" class="scrollto"><i class="fa fa-graduation-cap"></i>Profile</a>
+						</li>
+						<li>
+							<a href="#skills" class="scrollto"><i class="fa fa-cog"></i>Skills</a>
 						</li>
 						<li>
 							<a href="#portfolio" class="scrollto"><i class="fa fa-briefcase"></i>Portfolio</a>
-						</li>
-						<li>
-							<a href="#about" class="scrollto"><i class="fa fa-graduation-cap"></i>Profile</a>
 						</li>
 						<li>
 							<a href="#contact" class="scrollto"><i class="fa fa-envelope"></i>Contact</a>
@@ -117,6 +117,39 @@
 			<div class="scroll-down">
 				<a href="#services" class="scrollto">Learn More</a>
 			</div>
+			<!-- /////////////////////////////////////////
+			About//////////////////////
+			////////////////////////// -->
+			<section id="about" class="big-padding">
+
+				<div class="container">
+
+					<h1 class="section-title">My Profile<span class="main-color"></span></h1>
+
+					<div class="row profile">
+
+						<div class="col-sm-10 col-sm-offset-1 text-center">
+
+							<figure class="hover-wrapper scrollimation fade-right">
+								<img class="img-responsive img-circle profile-img" src="assets/images/sexyKaram.PNG" alt="">
+								<figcaption class="hover-text">That's Me!</figcaption>
+							</figure>
+
+							<h2 class="scrollimation fade-left">Karam Hijazi</h2>
+							<h3 class="scrollimation fade-left">FrontEnd Web Developer</h3>
+
+							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have graduated from a intense thirteen week bootcamp, from Devmountain. I have a passion for creating challenging, intuitive, and beautiful products. My developing process is very hands-on and visual.</p>
+
+							<p class="lead margin-top scrollimation fade-left">Creating is not just a job for me, it's a passion. </p>
+							<p class="scrollimation fade-left"><a class="btn btn-dc btn-main-color scrollto" href="#portfolio">My Portfolio</a></p>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</section>
 
 			<!-- ==============================================
 			SERVICES
@@ -125,7 +158,7 @@
 
 				<div class="container">
 
-					<h1 class="section-title">My Skills<span class="main-color">1</span></h1>
+					<h1 class="section-title">My Skills<span class="main-color"></span></h1>
 
 					<div class="text-center">
 						<div class="btn-group">
@@ -255,7 +288,7 @@
 
 				<div class="container">
 
-					<h1 class="section-title">My Portfolio<span class="main-color">2</span></h1>
+					<h1 class="section-title">My Portfolio<span class="main-color"></span></h1>
 
 					<div class="row">
 
@@ -320,36 +353,6 @@
 			<!-- ==============================================
 			ABOUT
 			=============================================== -->
-			<section id="about" class="big-padding">
-
-				<div class="container">
-
-					<h1 class="section-title">My Profile<span class="main-color">3</span></h1>
-
-					<div class="row profile">
-
-						<div class="col-sm-10 col-sm-offset-1 text-center">
-
-							<figure class="hover-wrapper scrollimation fade-right">
-								<img class="img-responsive img-circle profile-img" src="assets/images/sexyKaram.PNG" alt="">
-								<figcaption class="hover-text">That's Me!</figcaption>
-							</figure>
-
-							<h2 class="scrollimation fade-left">Karam Hijazi</h2>
-							<h3 class="scrollimation fade-left">FrontEnd Web Developer</h3>
-
-							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have graduated from a intense thirteen week bootcamp, from Devmountain. I have a passion for creating challenging, intuitive, and beautiful products. My developing process is very hands-on and visual.</p>
-
-							<p class="lead margin-top scrollimation fade-left">Creating is not just a job for me, it's a passion. </p>
-							<p class="scrollimation fade-left"><a class="btn btn-dc btn-main-color scrollto" href="#portfolio">My Portfolio</a></p>
-
-						</div>
-
-					</div>
-
-				</div>
-
-			</section>
 
 			<!-- ==============================================
 			SKILLS
@@ -734,7 +737,7 @@
 
 				<div class="container">
 
-					<h1 class="section-title">Contact Me<span class="main-color">6</span></h1>
+					<h1 class="section-title">Contact Me<span class="main-color"></span></h1>
 
 					<div class="row">
 
@@ -813,7 +816,7 @@
 
 								<ul class="footer-nav">
 									<li><a class="scrollto" href="#home">Home</a></li>
-									<li><a class="scrollto" href="#services">Services</a></li>
+									<li><a class="scrollto" href="#services">Skills</a></li>
 									<li><a class="scrollto" href="#portfolio">Portfolio</a></li>
 									<li><a class="scrollto" href="#contact">Contact</a></li>
 								</ul>
