fixed the contact form

--- a/Public/index.html
+++ b/Public/index.html
@@ -775,15 +775,15 @@
 
 							<div class="form-group">
 								<div class="controls">
-									<input id="contact-mail" ng-model="email.subjectField" name="Subject" class="form-control requiredField" type="Subject" data-error-empty="is required" >
-									<label class="control-label" for="contact-mail">Subject</label>
+									<input id="contact-mail" ng-model="email.subjectField"  class="form-control requiredField"  data-error-empty="is required" >
+									<label class="control-label">Subject</label>
 								</div>
 							</div><!-- End email input -->
 
 							<div class="form-group">
 								<div class="controls">
-									<textarea id="contact-message" ng-model="email.textField" name="comments" class="form-control requiredField" rows="6" data-error-empty="is required"></textarea>
-									<label class="control-label" for="contact-message">Message</label>
+									<textarea id="contact-message" ng-model="email.textField"name="comments" class="form-control requiredField" rows="6" data-error-empty="is required"></textarea>
+									<label class="control-label">Your Email/Message</label>
 								</div>
 							</div><!-- End textarea -->
 
