take u to another page

--- a/Public/index.html
+++ b/Public/index.html
@@ -298,7 +298,7 @@
 
 							<p>We where inspired by Domo and Data Manipulation, our team built a working clone of a Domo App that uses data to help businesses grow</p>
 
-							<p><a class="btn btn-dc btn-small btn-main-color" href="http://kromo.donovanhiland.com">Visit Website</a></p>
+							<p><a class="btn btn-dc btn-small btn-main-color" target="_blank"href="http://kromo.donovanhiland.com">Visit Website</a></p>
 
 						</div>
 
@@ -320,7 +320,7 @@
 
 							<p>Krello is a collaboration tool that organizes your projects into boards. In one glance, Krello tells you what's being worked on, who's working on what, and where something is in a process.</p>
 
-							<p><a class="btn btn-dc btn-small btn-main-color" href="http://107.170.47.215:3000/">Visit Website</a></p>
+							<p><a class="btn btn-dc btn-small btn-main-color"target="_blank" href="http://107.170.47.215:3000/">Visit Website</a></p>
 
 						</div>
 
@@ -753,9 +753,9 @@
 							</p>
 
 							<div class="social-links">
-								<a href="https://twitter.com/KaramHijazi"><i class="fa fa-fw fa-twitter"></i></a>
+								<a href="https://twitter.com/KaramHijazi" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
 								<!-- <a href="https://www.facebook.com/karam.hijazi.33"><i class="fa fa-fw fa-facebook-square"></i></a> -->
-								<a href="https://www.linkedin.com/in/karamhijazi"><i class="fa fa-fw fa-linkedin-square"></i></a>
+								<a href="https://www.linkedin.com/in/karamhijazi" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i></a>
 							</div>
 
 							<p><a class="mail-styled" href="mailto:hijazikaram@gmail.com">contact@karamhijazi.com</a></p>
@@ -827,9 +827,9 @@
 
 						<div class="col-sm-2 text-right social-links">
 
-							<a href="https://twitter.com/KaramHijazi" data-toggle="tooltip" title="Follow me on Twitter"><i class="fa fa-fw fa-twitter"></i></a>
+							<a href="https://twitter.com/KaramHijazi" data-toggle="tooltip" title="Follow me on Twitter"><i class="fa fa-fw fa-twitter" target="_blank"></i></a>
 							<!-- <a href="https://www.facebook.com/karam.hijazi.33" data-toggle="tooltip" title="Follow me on Facebook"><i class="fa fa-fw fa-facebook"></i></a> -->
-							<a href="https://www.linkedin.com/in/karamhijazi" data-toggle="tooltip" title="Follow me on LinkedIn"><i class="fa fa-fw fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/karamhijazi" data-toggle="tooltip" title="Follow me on LinkedIn"><i class="fa fa-fw fa-linkedin" target="_blank"></i></a>
 
 						</div>
 
