removed the graph

--- a/Public/index.html
+++ b/Public/index.html
@@ -138,7 +138,7 @@
 							<h2 class="scrollimation fade-left">Karam Hijazi</h2>
 							<h3 class="scrollimation fade-left">FrontEnd Web Developer</h3>
 
-							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have graduated from a intense thirteen week bootcamp, from Devmountain. I have a passion for creating challenging, intuitive, and beautiful products. My developing process is very hands-on and visual.</p>
+							<p class="margin-top scrollimation fade-right">I am Karam Hijazi, a seventeen year old developer from MD. I have recently graduated from a intense thirteen week bootcamp called Devmountain. I have a passion for creating challenging, intuitive, and beautiful products. My developing process is very hands-on and visual.</p>
 
 							<p class="lead margin-top scrollimation fade-left">Creating is not just a job for me, it's a passion. </p>
 							<p class="scrollimation fade-left"><a class="btn btn-dc btn-main-color scrollto" href="#portfolio">My Portfolio</a></p>
@@ -357,7 +357,7 @@
 			<!-- ==============================================
 			SKILLS
 			=============================================== -->
-			<section id="skills" class="small-padding dark-bg">
+			<!-- <section id="skills" class="small-padding dark-bg">
 
 				<div class="container">
 
@@ -384,7 +384,7 @@
 
 				</div>
 
-			</section>
+			</section> -->
 
 			<!-- ==============================================
 			PORTFOLIO
