put back the graph

--- a/Public/index.html
+++ b/Public/index.html
@@ -357,7 +357,7 @@
 			<!-- ==============================================
 			SKILLS
 			=============================================== -->
-			<!-- <section id="skills" class="small-padding dark-bg">
+			<section id="skills" class="small-padding dark-bg">
 
 				<div class="container">
 
@@ -384,7 +384,7 @@
 
 				</div>
 
-			</section> -->
+			</section>
 
 			<!-- ==============================================
 			PORTFOLIO
