--- a/Public/index.html
+++ b/Public/index.html
@@ -176,15 +176,18 @@
 									<figcaption class="hover-text">That's Me!</figcaption> -->
 								<!-- <div class="service-icon "><i class="fa fa-html5"></i></div> -->
 
-										<div class="service-icon "><img class="img-responsive1" src="assets/images/html.png" alt="" /></div>
+							<div class="service-icon "><img class="img-responsive1" src="assets/images/html.png" alt=""/>
+								<div id="title">HTML5</div></div>
 
 									<br>
 
-										<div class="service-icon "><img class="img-responsive1" src="assets/images/css.png" alt="" /></div>
+										<div class="service-icon "><img class="img-responsive1" src="assets/images/css.png" alt="" />
+											<div id="title">CSS3</div></div>
 
 									<br>
 
-										<div class="service-icon "><img class="img-responsive1" src="assets/images/javascript.png" alt="" /></div>
+										<div class="service-icon "><img class="img-responsive1" src="assets/images/javascript.png" alt="" />
+											<div id="title">JavaScript</div></div>
 
 								<!-- <div class="service-icon "><i class="fa fa-css3"></i></div> -->
 
@@ -199,17 +202,21 @@
 
 
 
-											<div class="service-icon "><img class="img-responsive1" src="assets/images/bootsrap.png" alt="" /></div>
+											<div class="service-icon "><img class="img-responsive1" src="assets/images/bootsrap.png" alt="" />
+												<div id="title">Bootstrap</div></div>
 
-
-										<br>
-
-											<div class="service-icon "><img class="img-responsive2" src="assets/images/jquery.png" alt="" /></div>
 
 
 										<br>
 
-											<div class="service-icon "><img class="img-responsive1" src="assets/images/angular.png" alt="" /></div>
+											<div class="service-icon "><img class="img-responsive2" src="assets/images/jquery.png" alt="" />
+												<div id="title">JQuery</div></div>
+
+
+										<br>
+
+											<div class="service-icon "><img class="img-responsive1" src="assets/images/angular.png" alt="" />
+												<div id="title">Angular.JS</div></div>
 
 
 
@@ -218,19 +225,19 @@
 							<div class="col-sm-4 service-item scrollimation fade-left">
 
 
-									<div class="service-icon "><img class="img-responsive1" src="assets/images/gulp.png" alt="" /></div>
+									<div class="service-icon "><img class="img-responsive1" src="assets/images/gulp.png" alt="" />
+						<div id="title">Gulp</div></div>
 
 
 
 								<br>
 
-									<div class="service-icon "><img class="img-responsive1" src="assets/images/sass.png" alt="" /></div>
-
-
+									<div class="service-icon "><img class="img-responsive1" src="assets/images/sass.png" alt="" />
+									<div id="title">SASS</div></div>
 								<br>
 
-									<div class="service-icon "><img class="img-responsive1" src="assets/images/react.png" alt="" /></div>
-
+									<div class="service-icon "><img class="img-responsive1" src="assets/images/react.png" alt="" />
+										<div id="title">React.JS</div></div>
 
 
 							</div>
@@ -350,9 +357,6 @@
 
 			</section>
 
-			<!-- ==============================================
-			ABOUT
-			=============================================== -->
 
 			<!-- ==============================================
 			SKILLS
