--- a/Public/index.html
+++ b/Public/index.html
@@ -160,12 +160,12 @@
 
 					<h1 class="section-title">My Skills<span class="main-color"></span></h1>
 
-					<div class="text-center">
+					<!-- <div class="text-center">
 						<div class="btn-group">
 							<button type="button" href="#front-end" class="btn btn-default toggle-tabs active">FrontEnd</button>
-							<!-- <button type="button" href="#back-end" class="btn btn-default toggle-tabs">Back End</button> -->
+							 <button type="button" href="#back-end" class="btn btn-default toggle-tabs">Back End</button>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="tab-content">
 
