--- a/Public/index.html
+++ b/Public/index.html
@@ -381,7 +381,7 @@
 						</div>
 						<div class="col-sm-6 col-md-3 text-center">
 							<span class="chart" data-percent="93"><span class="percent">93</span></span>
-							<h2 class="text-center main-color">High Score</h2>
+							<h2 class="text-center main-color">Overall Score</h2>
 						</div>
 
 					</div><!--End row -->
